# tttxo

./: LICENSE  README.md  pyproject.toml
src/tttxo/: __main__.py  curses_inter.py  game.py  utils.py
